src/latexpeg.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { document: peg$parsedocument },
        peg$startRuleFunction  = peg$parsedocument,

        peg$c0 = peg$otherExpectation("document"),
        peg$c1 = peg$otherExpectation("token"),
        peg$c2 = function(t) {return t},
        peg$c3 = function(eq) {return {TYPE:"inlinemath", content: eq}},
        peg$c4 = function() {return {TYPE:"parbreak"}},
        peg$c5 = peg$anyExpectation(),
        peg$c6 = function(x) {return x},
        peg$c7 = function(x) {return x.join("")},
        peg$c8 = peg$otherExpectation("math token"),
        peg$c9 = function(x) {return {TYPE:"superscript", content:x}},
        peg$c10 = function(x) {return {TYPE:"subscript", content:x}},
        peg$c11 = peg$otherExpectation("args token"),
        peg$c12 = ",",
        peg$c13 = peg$literalExpectation(",", false),
        peg$c14 = "]",
        peg$c15 = peg$literalExpectation("]", false),
        peg$c16 = peg$otherExpectation("nonchar token"),
        peg$c17 = "%",
        peg$c18 = peg$literalExpectation("%", false),
        peg$c19 = peg$otherExpectation("whitespace"),
        peg$c20 = function() {return {TYPE: "whitespace"}},
        peg$c21 = peg$otherExpectation("number"),
        peg$c22 = ".",
        peg$c23 = peg$literalExpectation(".", false),
        peg$c24 = function(a, b) {return a.join("") + "." + b.join("")},
        peg$c25 = function(b) {return "." + b.join("")},
        peg$c26 = function(a) {return a.join("") + "."},
        peg$c27 = peg$otherExpectation("special macro"),
        peg$c28 = "verb",
        peg$c29 = peg$literalExpectation("verb", false),
        peg$c30 = function(e, end) {return end == e},
        peg$c31 = function(e, x) {return x},
        peg$c32 = function(e, x, end) {return end == e},
        peg$c33 = function(e, x) {return {TYPE:"verb", escape:e, content:x.join("")}},
        peg$c34 = "begin{verbatim}",
        peg$c35 = peg$literalExpectation("begin{verbatim}", false),
        peg$c36 = "end{verbatim}",
        peg$c37 = peg$literalExpectation("end{verbatim}", false),
        peg$c38 = function(x) {return {TYPE:"verbatim", content:x.join("")}},
        peg$c39 = "begin{comment}",
        peg$c40 = peg$literalExpectation("begin{comment}", false),
        peg$c41 = "end{comment}",
        peg$c42 = peg$literalExpectation("end{comment}", false),
        peg$c43 = function(x) {return {TYPE:"commentenv", content:x.join("")}},
        peg$c44 = function(x) {return {TYPE:"displaymath", content:x}},
        peg$c45 = function(x) {return {TYPE:"inlinemath", content:x}},
        peg$c46 = peg$otherExpectation("macro"),
        peg$c47 = function(n) {return n.join("")},
        peg$c48 = function(n) {return n},
        peg$c49 = function(m) {return {TYPE:"macro", content:m}},
        peg$c50 = peg$otherExpectation("group"),
        peg$c51 = function(c) {return c},
        peg$c52 = function(x) {return {TYPE:"group", content:x}},
        peg$c53 = peg$otherExpectation("argument list"),
        peg$c54 = "[",
        peg$c55 = peg$literalExpectation("[", false),
        peg$c56 = function(body) {return {TYPE:"arglist", content:body}},
        peg$c57 = peg$otherExpectation("environment"),
        peg$c58 = function(env, args, end_env) {return compare_env(env,end_env)},
        peg$c59 = function(env, args, x) {return x},
        peg$c60 = function(env, args, body) {return {TYPE:"environment", env:env.content, args:args, content:body}},
        peg$c61 = peg$otherExpectation("math environment"),
        peg$c62 = function(env, end_env) {console.log(env, end_env,  compare_env({content:[env]},end_env));return compare_env({content:[env]},end_env)},
        peg$c63 = function(env, x) {return x},
        peg$c64 = function(env, body) {return {TYPE:"mathenv", env:env, content:body}},
        peg$c65 = peg$otherExpectation("math group"),
        peg$c66 = peg$otherExpectation("full comment"),
        peg$c67 = function(x) {return {TYPE:"comment", content:x, sameline:false}},
        peg$c68 = function(x) {return {TYPE:"comment", content:x, sameline:true}},
        peg$c69 = "(",
        peg$c70 = peg$literalExpectation("(", false),
        peg$c71 = ")",
        peg$c72 = peg$literalExpectation(")", false),
        peg$c73 = "begin",
        peg$c74 = peg$literalExpectation("begin", false),
        peg$c75 = "end",
        peg$c76 = peg$literalExpectation("end", false),
        peg$c77 = "equation*",
        peg$c78 = peg$literalExpectation("equation*", false),
        peg$c79 = "equation",
        peg$c80 = peg$literalExpectation("equation", false),
        peg$c81 = "align*",
        peg$c82 = peg$literalExpectation("align*", false),
        peg$c83 = "align",
        peg$c84 = peg$literalExpectation("align", false),
        peg$c85 = "alignat*",
        peg$c86 = peg$literalExpectation("alignat*", false),
        peg$c87 = "alignat",
        peg$c88 = peg$literalExpectation("alignat", false),
        peg$c89 = "gather*",
        peg$c90 = peg$literalExpectation("gather*", false),
        peg$c91 = "gather",
        peg$c92 = peg$literalExpectation("gather", false),
        peg$c93 = "multline*",
        peg$c94 = peg$literalExpectation("multline*", false),
        peg$c95 = "multline",
        peg$c96 = peg$literalExpectation("multline", false),
        peg$c97 = "flalign*",
        peg$c98 = peg$literalExpectation("flalign*", false),
        peg$c99 = "flalign",
        peg$c100 = peg$literalExpectation("flalign", false),
        peg$c101 = "split",
        peg$c102 = peg$literalExpectation("split", false),
        peg$c103 = "math",
        peg$c104 = peg$literalExpectation("math", false),
        peg$c105 = "displaymath",
        peg$c106 = peg$literalExpectation("displaymath", false),
        peg$c107 = peg$otherExpectation("escape"),
        peg$c108 = "\\",
        peg$c109 = peg$literalExpectation("\\", false),
        peg$c110 = "{",
        peg$c111 = peg$literalExpectation("{", false),
        peg$c112 = "}",
        peg$c113 = peg$literalExpectation("}", false),
        peg$c114 = "$",
        peg$c115 = peg$literalExpectation("$", false),
        peg$c116 = "&",
        peg$c117 = peg$literalExpectation("&", false),
        peg$c118 = peg$otherExpectation("newline"),
        peg$c119 = "\r",
        peg$c120 = peg$literalExpectation("\r", false),
        peg$c121 = "\n",
        peg$c122 = peg$literalExpectation("\n", false),
        peg$c123 = "\r\n",
        peg$c124 = peg$literalExpectation("\r\n", false),
        peg$c125 = "#",
        peg$c126 = peg$literalExpectation("#", false),
        peg$c127 = "^",
        peg$c128 = peg$literalExpectation("^", false),
        peg$c129 = "_",
        peg$c130 = peg$literalExpectation("_", false),
        peg$c131 = "\0",
        peg$c132 = peg$literalExpectation("\0", false),
        peg$c133 = /^[ \t]/,
        peg$c134 = peg$classExpectation([" ", "\t"], false, false),
        peg$c135 = function() { return " "},
        peg$c136 = peg$otherExpectation("letter"),
        peg$c137 = /^[a-zA-Z]/,
        peg$c138 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c139 = peg$otherExpectation("digit"),
        peg$c140 = /^[0-9]/,
        peg$c141 = peg$classExpectation([["0", "9"]], false, false),
        peg$c142 = peg$otherExpectation("punctuation"),
        peg$c143 = /^[.,;:\-*\/()!?=+<>[\]]/,
        peg$c144 = peg$classExpectation([".", ",", ";", ":", "-", "*", "/", "(", ")", "!", "?", "=", "+", "<", ">", "[", "]"], false, false),
        peg$c145 = function(c) {return c.join("")},

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsedocument() {
      var s0, s1;

      peg$silentFails++;
      s0 = [];
      s1 = peg$parsetoken();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parsetoken();
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c0); }
      }

      return s0;
    }

    function peg$parsetoken() {
      var s0, s1, s2, s3, s4, s5, s6;

      peg$silentFails++;
      s0 = peg$parsespecial_macro();
      if (s0 === peg$FAILED) {
        s0 = peg$parsemacro();
        if (s0 === peg$FAILED) {
          s0 = peg$parsefull_comment();
          if (s0 === peg$FAILED) {
            s0 = peg$parsegroup();
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parsemath_shift();
              if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$currPos;
                s4 = peg$currPos;
                peg$silentFails++;
                s5 = peg$parsemath_shift();
                peg$silentFails--;
                if (s5 === peg$FAILED) {
                  s4 = void 0;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
                if (s4 !== peg$FAILED) {
                  s5 = peg$parsemath_token();
                  if (s5 !== peg$FAILED) {
                    peg$savedPos = s3;
                    s4 = peg$c2(s5);
                    s3 = s4;
                  } else {
                    peg$currPos = s3;
                    s3 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
                if (s3 !== peg$FAILED) {
                  while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$currPos;
                    s4 = peg$currPos;
                    peg$silentFails++;
                    s5 = peg$parsemath_shift();
                    peg$silentFails--;
                    if (s5 === peg$FAILED) {
                      s4 = void 0;
                    } else {
                      peg$currPos = s4;
                      s4 = peg$FAILED;
                    }
                    if (s4 !== peg$FAILED) {
                      s5 = peg$parsemath_token();
                      if (s5 !== peg$FAILED) {
                        peg$savedPos = s3;
                        s4 = peg$c2(s5);
                        s3 = s4;
                      } else {
                        peg$currPos = s3;
                        s3 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s3;
                      s3 = peg$FAILED;
                    }
                  }
                } else {
                  s2 = peg$FAILED;
                }
                if (s2 !== peg$FAILED) {
                  s3 = peg$parsemath_shift();
                  if (s3 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c3(s2);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$parsealignment_tab();
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = [];
                  s2 = peg$parsesp();
                  while (s2 !== peg$FAILED) {
                    s1.push(s2);
                    s2 = peg$parsesp();
                  }
                  if (s1 !== peg$FAILED) {
                    s2 = peg$parsenl();
                    if (s2 !== peg$FAILED) {
                      s3 = [];
                      s4 = peg$parsesp();
                      while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        s4 = peg$parsesp();
                      }
                      if (s3 !== peg$FAILED) {
                        s4 = [];
                        s5 = peg$parsenl();
                        if (s5 !== peg$FAILED) {
                          while (s5 !== peg$FAILED) {
                            s4.push(s5);
                            s5 = peg$parsenl();
                          }
                        } else {
                          s4 = peg$FAILED;
                        }
                        if (s4 !== peg$FAILED) {
                          s5 = [];
                          s6 = peg$parsesp();
                          while (s6 !== peg$FAILED) {
                            s5.push(s6);
                            s6 = peg$parsesp();
                          }
                          if (s5 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c4();
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                  if (s0 === peg$FAILED) {
                    s0 = peg$parsemacro_parameter();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parsesuperscript();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parsesubscript();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseignore();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parsenumber();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parsewhitespace();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parsepunctuation();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$currPos;
                                  s1 = [];
                                  s2 = peg$currPos;
                                  s3 = peg$currPos;
                                  peg$silentFails++;
                                  s4 = peg$parsenonchar_token();
                                  peg$silentFails--;
                                  if (s4 === peg$FAILED) {
                                    s3 = void 0;
                                  } else {
                                    peg$currPos = s3;
                                    s3 = peg$FAILED;
                                  }
                                  if (s3 !== peg$FAILED) {
                                    if (input.length > peg$currPos) {
                                      s4 = input.charAt(peg$currPos);
                                      peg$currPos++;
                                    } else {
                                      s4 = peg$FAILED;
                                      if (peg$silentFails === 0) { peg$fail(peg$c5); }
                                    }
                                    if (s4 !== peg$FAILED) {
                                      peg$savedPos = s2;
                                      s3 = peg$c6(s4);
                                      s2 = s3;
                                    } else {
                                      peg$currPos = s2;
                                      s2 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s2;
                                    s2 = peg$FAILED;
                                  }
                                  if (s2 !== peg$FAILED) {
                                    while (s2 !== peg$FAILED) {
                                      s1.push(s2);
                                      s2 = peg$currPos;
                                      s3 = peg$currPos;
                                      peg$silentFails++;
                                      s4 = peg$parsenonchar_token();
                                      peg$silentFails--;
                                      if (s4 === peg$FAILED) {
                                        s3 = void 0;
                                      } else {
                                        peg$currPos = s3;
                                        s3 = peg$FAILED;
                                      }
                                      if (s3 !== peg$FAILED) {
                                        if (input.length > peg$currPos) {
                                          s4 = input.charAt(peg$currPos);
                                          peg$currPos++;
                                        } else {
                                          s4 = peg$FAILED;
                                          if (peg$silentFails === 0) { peg$fail(peg$c5); }
                                        }
                                        if (s4 !== peg$FAILED) {
                                          peg$savedPos = s2;
                                          s3 = peg$c6(s4);
                                          s2 = s3;
                                        } else {
                                          peg$currPos = s2;
                                          s2 = peg$FAILED;
                                        }
                                      } else {
                                        peg$currPos = s2;
                                        s2 = peg$FAILED;
                                      }
                                    }
                                  } else {
                                    s1 = peg$FAILED;
                                  }
                                  if (s1 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c7(s1);
                                  }
                                  s0 = s1;
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      return s0;
    }

    function peg$parsemath_token() {
      var s0, s1, s2, s3, s4;

      peg$silentFails++;
      s0 = peg$parsespecial_macro();
      if (s0 === peg$FAILED) {
        s0 = peg$parsemacro();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsefull_comment();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parsewhitespace();
            while (s2 !== peg$FAILED) {
              s1.push(s2);
              s2 = peg$parsewhitespace();
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parsegroup();
              if (s2 !== peg$FAILED) {
                s3 = [];
                s4 = peg$parsewhitespace();
                while (s4 !== peg$FAILED) {
                  s3.push(s4);
                  s4 = peg$parsewhitespace();
                }
                if (s3 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c6(s2);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = [];
              s2 = peg$parsewhitespace();
              while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = peg$parsewhitespace();
              }
              if (s1 !== peg$FAILED) {
                s2 = peg$parsealignment_tab();
                if (s2 !== peg$FAILED) {
                  s3 = [];
                  s4 = peg$parsewhitespace();
                  while (s4 !== peg$FAILED) {
                    s3.push(s4);
                    s4 = peg$parsewhitespace();
                  }
                  if (s3 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c6(s2);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = [];
                s2 = peg$parsewhitespace();
                while (s2 !== peg$FAILED) {
                  s1.push(s2);
                  s2 = peg$parsewhitespace();
                }
                if (s1 !== peg$FAILED) {
                  s2 = peg$parsemacro_parameter();
                  if (s2 !== peg$FAILED) {
                    s3 = [];
                    s4 = peg$parsewhitespace();
                    while (s4 !== peg$FAILED) {
                      s3.push(s4);
                      s4 = peg$parsewhitespace();
                    }
                    if (s3 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c6(s2);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = [];
                  s2 = peg$parsewhitespace();
                  while (s2 !== peg$FAILED) {
                    s1.push(s2);
                    s2 = peg$parsewhitespace();
                  }
                  if (s1 !== peg$FAILED) {
                    s2 = peg$parsesuperscript();
                    if (s2 !== peg$FAILED) {
                      s3 = [];
                      s4 = peg$parsewhitespace();
                      while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        s4 = peg$parsewhitespace();
                      }
                      if (s3 !== peg$FAILED) {
                        s4 = peg$parsemath_token();
                        if (s4 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c9(s4);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = [];
                    s2 = peg$parsewhitespace();
                    while (s2 !== peg$FAILED) {
                      s1.push(s2);
                      s2 = peg$parsewhitespace();
                    }
                    if (s1 !== peg$FAILED) {
                      s2 = peg$parsesubscript();
                      if (s2 !== peg$FAILED) {
                        s3 = [];
                        s4 = peg$parsewhitespace();
                        while (s4 !== peg$FAILED) {
                          s3.push(s4);
                          s4 = peg$parsewhitespace();
                        }
                        if (s3 !== peg$FAILED) {
                          s4 = peg$parsemath_token();
                          if (s4 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c10(s4);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseignore();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parsewhitespace();
                        if (s0 === peg$FAILED) {
                          if (input.length > peg$currPos) {
                            s0 = input.charAt(peg$currPos);
                            peg$currPos++;
                          } else {
                            s0 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c5); }
                          }
                        }
                      }
                    }
                  }
